WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267998
NativeImages shared to GPUP do not store GPUP-specific information
https://bugs.webkit.org/show_bug.cgi?id=267998
Summary
NativeImages shared to GPUP do not store GPUP-specific information
Kimmo Kinnunen
Reported
2024-01-24 05:53:04 PST
NativeImages cannot contain GPUP specific data
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-24 05:53:51 PST
<
rdar://problem/121517135
>
Kimmo Kinnunen
Comment 2
2024-01-25 00:50:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23226
EWS
Comment 3
2024-01-30 05:26:51 PST
Committed
273739@main
(c59ecbabbca2): <
https://commits.webkit.org/273739@main
> Reviewed commits have been landed. Closing PR #23226 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug