Source/WebKit/WebProcess/GPU/graphics/RemoteResourceCacheProxy.cpp
@@ -31,6 +31,7 @@
 #include "ArgumentCoders.h"
 #include "Logging.h"
 #include "RemoteImageBufferProxy.h"
+#include "RemoteNativeImageBackendProxy.h"
 #include "RemoteRenderingBackendProxy.h"
 #include "WebProcess.h"
 #include <WebCore/FontCustomPlatformData.h>
@@ -96,44 +97,6 @@ void RemoteResourceCacheProxy::recordImageBufferUse(WebCore::ImageBuffer& imageB
     ASSERT_UNUSED(iterator, iterator != m_imageBuffers.end());
 }
 
-inline static std::optional<ShareableBitmap::Handle> createShareableBitmapFromNativeImage(NativeImage& image)
-{
-    RefPtr<ShareableBitmap> bitmap;
-    PlatformImagePtr platformImage;
-
-#if USE(CG)
-    bitmap = ShareableBitmap::createFromImagePixels(image);
-    if (bitmap)
-        platformImage = bitmap->createPlatformImage(DontCopyBackingStore, ShouldInterpolate::Yes);
-#endif
-
-    // If we failed to create ShareableBitmap or PlatformImage, fall back to image-draw method.
-    if (!platformImage) {
-        bitmap = ShareableBitmap::createFromImageDraw(image);
-
-        // If createGraphicsContext() failed because the image colorSpace is not
-        // supported for output, fallback to SRGB.
-        if (!bitmap)
-            bitmap = ShareableBitmap::createFromImageDraw(image, DestinationColorSpace::SRGB());
-
-        if (bitmap)
-            platformImage = bitmap->createPlatformImage(DontCopyBackingStore, ShouldInterpolate::Yes);
-    }
-
-    if (!platformImage)
-        return std::nullopt;
-
-    auto handle = bitmap->createHandle();
-    if (!handle)
-        return std::nullopt;
-
-    handle->takeOwnershipOfMemory(MemoryLedger::Graphics);
-
-    // Replace the PlatformImage of the input NativeImage with the shared one.
-    image.replaceContents(WTFMove(platformImage));
-    return handle;
-}
-
 void RemoteResourceCacheProxy::recordDecomposedGlyphsUse(DecomposedGlyphs& decomposedGlyphs)
 {
     if (m_renderingResources.add(decomposedGlyphs.renderingResourceIdentifier(), decomposedGlyphs).isNewEntry) {
@@ -162,14 +125,19 @@ void RemoteResourceCacheProxy::recordNativeImageUse(NativeImage& image)
 {
     if (isMainRunLoop())
         WebProcess::singleton().deferNonVisibleProcessEarlyMemoryCleanupTimer();
-
-    auto addResult = m_renderingResources.ensure(image.renderingResourceIdentifier(), [&] {
-        return ThreadSafeWeakPtr<RenderingResource> { image };
-    });
-    if (!addResult.isNewEntry)
+    auto identifier = image.renderingResourceIdentifier();
+    if (m_renderingResources.contains(identifier))
         return;
 
-    auto handle = createShareableBitmapFromNativeImage(image);
+    RemoteNativeImageBackendProxy* backend = dynamicDowncast<RemoteNativeImageBackendProxy>(image.backend());
+    std::unique_ptr<RemoteNativeImageBackendProxy> newBackend;
+    if (!backend) {
+        newBackend = RemoteNativeImageBackendProxy::create(image);
+        backend = newBackend.get();
+    }
+    std::optional<ShareableBitmap::Handle> handle;
+    if (backend)
+        handle = backend->createHandle();
     if (!handle) {
         // FIXME: Failing to send the image to GPUP will crash it when referencing this image.
         LOG_WITH_STREAM(Images, stream
@@ -179,13 +147,18 @@ void RemoteResourceCacheProxy::recordNativeImageUse(NativeImage& image)
             << " ShareableBitmap could not be created; bailing.");
         return;
     }
-
+    m_renderingResources.add(identifier, ThreadSafeWeakPtr<RenderingResource> { image });
     // Set itself as an observer to NativeImage, so releaseNativeImage()
     // gets called when NativeImage is being deleleted.
     image.addObserver(*this);
 
+    handle->takeOwnershipOfMemory(MemoryLedger::Graphics);
+    // Replace the contents of the original NativeImage to save memory.
+    if (newBackend)
+        image.replaceBackend(makeUniqueRefFromNonNullUniquePtr(WTFMove(newBackend)));
+
     // Tell the GPU process to cache this resource.
-    m_remoteRenderingBackendProxy.cacheNativeImage(WTFMove(*handle), image.renderingResourceIdentifier());
+    m_remoteRenderingBackendProxy.cacheNativeImage(WTFMove(*handle), identifier);
 }
 
 void RemoteResourceCacheProxy::recordFontUse(Font& font)
